# llm-zoomcamp-project-2025

./: .gitignore  README.md  pyproject.toml
infra/ocr_service/: deployment.sh  main.tf  output.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
notebooks/: document_indexing.ipynb  document_ingestion.ipynb  end_to_end.ipynb
services/ocr_service/: Dockerfile
services/ocr_service/app/: handler.py
services/qdrant/: docker-compose.yml
