[project]
name = "llm-zoomcamp-project-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.39.9",
    "docling>=2.42.0",
    "dotenv>=0.9.9",
    "fastembed>=0.7.1",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "llama-index-core>=0.12.43",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-vector-stores-qdrant>=0.6.1",
    "python-doctr>=0.10.0",
    "sentence-transformers>=4.1.0",
    "torchvision>=0.22.1",
]
